Fix styling bug

--- a/website/src/components/playground/playground.module.css
+++ b/website/src/components/playground/playground.module.css
@@ -2,6 +2,7 @@
     font-family: Consolas, "Courier New", monospace;
     font-size: 14px;
     white-space: pre;
+    color: white;
 }
 
 .number {
